--- a/Shopkeeper/res/layout/fragment2_order.xml
+++ b/Shopkeeper/res/layout/fragment2_order.xml
@@ -351,10 +351,34 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#000000"
-                android:text="应支付" />
+                android:text="原价" />
 
             <TextView
                 android:id="@+id/should_pay"
+                android:layout_width="0dp"
+                android:layout_height="36px"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:text="0" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30px"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="36px"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:text="折后价格" />
+
+            <TextView
+                android:id="@+id/discount_pay"
                 android:layout_width="0dp"
                 android:layout_height="36px"
                 android:layout_weight="1"
