--- a/Shopkeeper/res/layout/fragment2_order.xml
+++ b/Shopkeeper/res/layout/fragment2_order.xml
@@ -313,7 +313,7 @@
                 android:textSize="14sp"
                 android:textColor="#000000"
                 android:gravity="center"
-                android:text="0" />
+                android:text="登录后可设置" />
         </LinearLayout>
 
         
