--- a/Shopkeeper/res/layout/payment_listview_item.xml
+++ b/Shopkeeper/res/layout/payment_listview_item.xml
@@ -21,5 +21,5 @@
         android:textSize="14sp"
         android:gravity="center|bottom"
         android:textColor="#000000"
-        android:text="0" />
+        android:text="" />
 </LinearLayout>
